LPD-64953 fix: getFirst does not compiles on jdk17